# OOP_TASK

./: CMakeLists.txt  TASK_1.cpp  TASK_1.txt  TASK_2.cpp  TASK_3.cpp  TASK_4.cpp  TASK_5.cpp  TASK_5_modified.cpp  TASK_6.cpp  TASK_7.cpp  ex  testing.cpp
CAL/: calculator.cpp  data.txt  error.cpp  error.h  lexer.cpp  lexer.h  parser.cpp  parser.h  syms.cpp  syms.h
CAL_CLASS_VER/: CAL.cpp  CAL.h  main.cpp
DATE_CLASS/: main.cpp  mdate.cpp  mdate.h
mTree/: mTree.cpp  mTree.h  main.cpp
